# nanodiffusion

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: code-quality.yaml
configs/: bench_large.yaml  bench_medium_plus.yaml  config.schema.json  debug.yaml  debug_sft.yaml  medium.yaml
examples/: bench_checkpoint.py  overfit_pattern.py
nanodiffusion/: __init__.py  _loop_utils.py  chat.py  checkpoint.py  cli.py  config.py  constants.py  inference.py  logs.py  loop.py  loss.py  metrics.py  ops.py  optimizer.py  registry.py  reporter.py  runtime.py  sampler.py  schedule.py  sharding.py  signals.py  tokenizer.py  train.py  train_step.py  types.py
nanodiffusion/cli/: __init__.py  config.py  data.py  pretrain.py  sample.py  serve.py  sft.py
nanodiffusion/data/: __init__.py  chat_datasets.py  chat_source.py  cursors.py  datasets.py  loader.py  registry.py  sft_loader.py  source.py
nanodiffusion/data/chat_datasets/: __init__.py  _base.py  gsm8k.py  identity.py  smoltalk.py
nanodiffusion/data/datasets/: __init__.py  _base.py  climbmix_400b.py  fineweb_edu.py
nanodiffusion/model/: __init__.py  _base.py  attention.py  block.py  embedding.py  transformer.py
nanodiffusion/pretrain/: __init__.py  loss.py  train.py
nanodiffusion/serve/: __init__.py  app.py  generation.py  middleware.py  protocol.py  runtime.py
nanodiffusion/sft/: __init__.py  loss.py  train.py
schemas/: protocol.json
scripts/: launch.sh  prepare_tpu.sh
tests/: _helpers.py  conftest.py  test_base.py  test_chat.py  test_chat_datasets.py  test_chat_source.py  test_checkpoint.py  test_cli.py  test_config_schema.py  test_data_cursors.py  test_data_datasets.py  test_data_loader.py  test_data_source.py  test_diffusion.py  test_inference.py  test_loop.py  test_metrics.py  test_model.py  test_reporter.py  test_sampler.py  test_tokenizer.py  test_train.py
tests/pretrain/: test_loss.py  test_train.py
tests/serve/: conftest.py  test_app.py  test_generation.py  test_middleware.py  test_protocol.py  test_schema_command.py
tests/sft/: test_config.py  test_loader.py  test_loss.py  test_train.py
tui/: Cargo.toml
tui/src/: app.rs  client.rs  effects.rs  logging.rs  main.rs  model.rs  msg.rs  protocol.rs  render.rs  runtime.rs  session.rs  state.rs  terminal.rs  ui.rs  update.rs  view.rs
