[project]
name = "nanodiffusion"
version = "0.1.0"
description = "Diffusion-based chat language model in JAX and Equinox"
readme = "README.md"
authors = [{ name = "Romain Graux", email = "author@romaingrx.com" }]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    # ML core
    "jax>=0.4.35",
    "equinox>=0.11.10",
    "optax>=0.2.4",
    "jaxtyping>=0.2.34",
    "einops>=0.8.0",
    # Tokenizer
    "tiktoken>=0.8.0",
    # Data pipeline
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    # CLI
    "click>=8.0.0",
    # Config
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    # Logging
    "structlog>=24.0.0",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
dev = ["basedpyright", "ruff", "pytest", "beartype>=0.18.0", "pre-commit"]
obs = ["wandb>=0.18.0"]
profile = ["tensorboard>=2.18.0", "tensorboard-plugin-profile>=2.18.0", "xprof>=0.12.0", "setuptools<78"]
# TPU backend. libtpu is Linux-only, so the platform marker keeps this
# a no-op on macOS local dev; on a GCP TPU VM, run ``uv sync --extra
# tpu`` to pull the libtpu-bundled jax wheel.
tpu = ["jax[tpu]>=0.4.35; sys_platform == 'linux'"]

[project.scripts]
nanodiffusion = "nanodiffusion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle — we don't enforce docstrings
    "COM812", # trailing comma (conflicts with ruff formatter)
    "ISC001", # single-line implicit string concat (conflicts with ruff formatter)
    "F722",   # jaxtyping dimension strings are not valid Python annotations (no fix available)
    "PLR0913", # JAX functions often need model + data + config + key args
]

[tool.ruff.lint.per-file-ignores]
"nanodiffusion/types.py" = ["UP040"]  # jaxtyping aliases need TypeAlias, not PEP 695 type keyword
"tests/**" = [
    "S101",    # assert is the standard pytest pattern
    "PLR2004", # magic values are fine in test assertions
    "INP001",  # tests don't need __init__.py (import-mode=importlib)
    "ANN401",  # *args/**kwargs in test fakes are inherently dynamic
    "TRY003",  # test exception messages don't need a dedicated exception class
    "EM101",   # ditto: terse string literals are fine in test raises
]
"examples/**" = [
    "T201",    # print is the primary output mechanism for scripts
    "INP001",  # examples don't need __init__.py
]

[tool.basedpyright]
include = ["nanodiffusion"]
typeCheckingMode = "strict"
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
# JAX/Equinox/Optax stub gap — these rules fire on library call sites, not
# our code. ``eqx.filter_value_and_grad`` and friends return
# ``jaxtyping.PyTree`` (= Unknown to basedpyright), and optax has no
# ``py.typed`` marker, so the Unknown cascades into every local that holds
# a gradient, update, or optimizer state. Neither equinox nor flax runs
# basedpyright strict for this exact reason: equinox tests against stock
# pyright defaults and uses ``typing.cast`` at its own PyTree boundaries
# (see equinox/_ad.py:185); flax uses only mypy with ``ignore_missing_imports``
# for jax/optax. Strong types at function boundaries are still enforced —
# inputs, outputs, and eqx.Module fields all stay typed.
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = ["slow: marks tests that take a long time"]

[dependency-groups]
dev = [
    "pyarrow-stubs>=20.0.0.20251215",
    "httpx",
    { include-group = "server" },
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.1.0",
]
