[package]
name = "nanodiffusion-tui"
version = "0.1.0"
edition = "2024"
publish = false
description = "Ratatui chat client with unmasking visualization for nanodiffusion"

[[bin]]
name = "nanodiffusion-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
color-eyre = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
