[package]
name = "nanodiffusion-tui"
version = "0.1.0"
edition = "2024"
publish = false
description = "Ratatui chat client with unmasking visualization for nanodiffusion"

[[bin]]
name = "nanodiffusion-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typify = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
reqwest-eventsource = "0.6"
tachyonfx = { version = "0.25", features = ["std-duration"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[lints.rust]
unsafe_code = "forbid"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# pragmatic allows widely accepted in real projects
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
multiple_crate_versions = "allow"
# generated bindings handle their own shape
# (the protocol module also has file-scoped allows)

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
